Correctly hide overflow when filters modal is open

--- a/src/facetwp-filters/style.scss
+++ b/src/facetwp-filters/style.scss
@@ -251,3 +251,7 @@
 		}
 	}
 }
+
+.modal-is-open {
+	overflow: hidden;
+}
